# bitch

./: .dockerignore  Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: docker-build.yml
modifiers/: always_armed.lua  generic_modifier.lua
plugins/: README.md  arm_notifier.lua  webhook_example.lua
src/: batch.rs  config.rs  main.rs  modifiers.rs  proxy.rs  rule_state.rs  rules.rs
src/plugins/: mod.rs
src/plugins/api/: http.rs  log.rs  mod.rs  serial.rs  util.rs
