[package]
name = "bitch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
mavlink = { version = "0.13", features = ["ardupilotmega"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
mlua = { version = "0.10", features = ["lua54", "async", "serialize", "vendored", "send"] }
serialport = { version = "4.5", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
